mds: handle case that there is no session for the importing caps

Fixes: http://tracker.ceph.com/issues/18646
Signed-off-by: "Yan, Zheng" <zyan@redhat.com>